--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "functions": {
-    "chat_api.php": {
+    "api/chat_api.php": {
       "runtime": "@vercel/php@0.6.0"
     }
   },
   "routes": [
     {
-      "src": "/chat_api.php",
-      "dest": "/chat_api.php"
+      "src": "/api/chat",
+      "dest": "/api/chat_api.php"
     }
   ]
 }
