--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,18 @@
       "src": "/api/chat",
       "dest": "/api/chat_api.php"
     }
+  ],
+  "env": {
+    "GEMINI_API_KEY": "AIzaSyDgE6V0wUOH3EvIbSpK2NAGkKX5SAc9QXQ"
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
+      ]
+    }
   ]
 }
