--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,26 @@
   "functions": {
     "api/chat_api.php": {
       "runtime": "@vercel/php@0.6.0"
+    },
+    "api/simple_chat.php": {
+      "runtime": "@vercel/php@0.6.0"
+    },
+    "api/diagnose.php": {
+      "runtime": "@vercel/php@0.6.0"
     }
   },
   "routes": [
     {
       "src": "/api/chat",
       "dest": "/api/chat_api.php"
+    },
+    {
+      "src": "/api/simple_chat",
+      "dest": "/api/simple_chat.php"
+    },
+    {
+      "src": "/api/diagnose",
+      "dest": "/api/diagnose.php"
     }
   ],
   "env": {
@@ -19,7 +33,8 @@
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" }
+        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept" },
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate" }
       ]
     }
   ]
